syntax = "proto3";

option java_multiple_files=true;
option java_package = "product";

service ProductService {
  //Unary
  rpc CreateProduct(ProductRegistrationRequest) returns (ProductRegistrationResponse);

  rpc GetProduct (ProductDetailsRequest) returns (ProductResponse);
  //server streaming
  rpc ListProducts (Empty) returns (stream ProductResponse);
  //Streaming server
  rpc AddProducts (stream ProductRegistrationRequest) returns (ProductRegistrationResponse);
  //Bidirectional
  rpc TrackOrders (stream OrderRequest) returns (stream OrderResponse);
}

message ProductRegistrationRequest{
  string name = 1;
  string category = 2;
  string description = 3;
  double price = 4;
}

message ProductRegistrationResponse{
  int64 id = 1;
  string name = 2;
  string message = 3;
}

message ProductDetailsRequest{
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string category = 3;
  string description = 4;
  double price = 5;
}


message Empty {}

message OrderRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}
